--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>02/2024: Excited to release <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, a real-world planning benchmark for language agents.</li>
             <li>01/2024: 5 papers accepted to ICLR'24 on <a href="https://arxiv.org/abs/2305.13300">knowledge conflicts in LLMs</a>, <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a>, <a href="https://arxiv.org/abs/2308.03688">AgentBench</a>, <a href="https://arxiv.org/abs/2311.04157">Interpretable Transformer</a>, <a href="https://arxiv.org/abs/2312.02436">MUFFIN</a>.</li>
             <li>01/2024: Thrilled to release <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, enabling everyone to <b>use GPT-4V-based web agents with one click</b>.</li>
             <li>12/2023: Thrilled to release <a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, a vision foundation model for the tree of life.</li>
@@ -237,6 +238,12 @@
               </span> <br />
               <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su.</span>
               <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
+            </li>
+            <li>
+              <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
+              </span> <br />
+              <span class="paperAuthor">Tinghui Zhu*, Kai Zhang*, Jian Xie, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.17686">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Deductive-Beam-Search">code</a>] (*: Equal Contribution)</span>
             </li>
             <li>
               <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
