--- a/index.html
+++ b/index.html
@@ -234,6 +234,18 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">A Trembling House of Cards? Mapping Adversarial Attacks against Language Agents
+              </span> <br />
+              <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10196">paper</a>] </span>
+            </li>
+            <li>
+              <span class="paperTitle">When is Tree Search Useful for LLM Planning? It Depends on the Discriminator
+              </span> <br />
+              <span class="paperAuthor">Ziru Chen, Michael White, Raymond Mooney, Ali Payani, Yu Su, Huan Sun.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10890">paper</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">TravelPlanner: A Benchmark for Real-World Planning with Language Agents
               </span> <br />
               <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su.</span>
