--- a/index.html
+++ b/index.html
@@ -234,6 +234,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">Middleware for LLMs: Tools Are Instrumental for Language Agents in Complex Environments
+              </span> <br />
+              <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.14672">paper</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">A Trembling House of Cards? Mapping Adversarial Attacks against Language Agents
               </span> <br />
               <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
