--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@
               <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://arxiv.org/abs/2401.01614">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
             </li>
             <li>
+              <span class="paperTitle">Dual-View Visual Contextualization for Web Navigation
+              </span> <br />
+              <span class="paperAuthor">Jihyung Kil, Chan Hee Song, Boyuan Zheng, Xiang Deng, Yu Su, Wei-Lun Chao.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.04476">paper</a>]</span>
+            </li>
+            <li>
               <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
               </span> <br />
               <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su.</span>
