--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>02/2024: 3 papers accepted to CVPR'24: <a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, <a href="https://mmmu-benchmark.github.io/">MMMU</a>, <a href="https://arxiv.org/abs/2402.04476">multimodal web agents</a>.</li>
             <li>02/2024: Excited to release <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, a real-world planning benchmark for language agents.</li>
             <li>01/2024: 5 papers accepted to ICLR'24 on <a href="https://arxiv.org/abs/2305.13300">knowledge conflicts in LLMs</a>, <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a>, <a href="https://arxiv.org/abs/2308.03688">AgentBench</a>, <a href="https://arxiv.org/abs/2311.04157">Interpretable Transformer</a>, <a href="https://arxiv.org/abs/2312.02436">MUFFIN</a>.</li>
             <li>01/2024: Thrilled to release <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, enabling everyone to <b>use GPT-4V-based web agents with one click</b>.</li>
@@ -269,29 +270,12 @@
               <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su.</span>
               <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://arxiv.org/abs/2401.01614">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
             </li>
-            <li>
-              <span class="paperTitle">Dual-View Visual Contextualization for Web Navigation
-              </span> <br />
-              <span class="paperAuthor">Jihyung Kil, Chan Hee Song, Boyuan Zheng, Xiang Deng, Yu Su, Wei-Lun Chao.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.04476">paper</a>]</span>
-            </li>
+            
             <li>
               <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
               </span> <br />
               <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.00608">paper</a>] </span>
-            </li>
-            <li>
-              <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
-              </span> <br />
-              <span class="paperAuthor">Samuel Stevens*, Jiaman Wu*, Matthew J Thompson, Elizabeth G Campolongo, Chan Hee Song, David Edward Carlyn, Li Dong, Wasila M Dahdul, Charles Stewart, Tanya Berger-Wolf, Wei-Lun Chao, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://imageomics.github.io/bioclip/">project website</a>] [<a href="https://arxiv.org/abs/2311.18803">paper</a>] [<a href="https://github.com/Imageomics/BioCLIP">code</a>] (*: Equal Contribution)</span>
-            </li>
-            <li>
-              <span class="paperTitle">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI
-              </span> <br />
-              <span class="paperAuthor">Xiang Yue*, Yuansheng Ni, Kai Zhang, Tianyu Zheng, Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, Zhenzhu Yang, Yibo Liu, Wenhao Huang, Huan Sun, Yu Su*, Wenhu Chen*.</span>
-              <span class="paperResource"> [<a href="https://mmmu-benchmark.github.io/">project website</a>] [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
             </li>
             <li>
               <span class="paperTitle">Multimodal Question Answering for Unified Information Extraction
@@ -309,6 +293,24 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                  <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
+                  </span> <br />
+                  <span class="paperAuthor">Samuel Stevens*, Jiaman Wu*, Matthew J Thompson, Elizabeth G Campolongo, Chan Hee Song, David Edward Carlyn, Li Dong, Wasila M Dahdul, Charles Stewart, Tanya Berger-Wolf, Wei-Lun Chao, Yu Su. In the Conference on Computer Vision and Pattern Recognition, 2024 (<b>CVPR'24</b>)</span>
+                  <span class="paperResource"> [<a href="https://imageomics.github.io/bioclip/">project website</a>] [<a href="https://arxiv.org/abs/2311.18803">paper</a>] [<a href="https://github.com/Imageomics/BioCLIP">code</a>] (*: Equal Contribution)</span>
+                </li>
+                <li>
+                  <span class="paperTitle">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI
+                  </span> <br />
+                  <span class="paperAuthor">Xiang Yue*, Yuansheng Ni, Kai Zhang, Tianyu Zheng, Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, Zhenzhu Yang, Yibo Liu, Wenhao Huang, Huan Sun, Yu Su*, Wenhu Chen*. In the Conference on Computer Vision and Pattern Recognition, 2024 (<b>CVPR'24</b>)</span>
+                  <span class="paperResource"> [<a href="https://mmmu-benchmark.github.io/">project website</a>] [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Dual-View Visual Contextualization for Web Navigation
+                  </span> <br />
+                  <span class="paperAuthor">Jihyung Kil, Chan Hee Song, Boyuan Zheng, Xiang Deng, Yu Su, Wei-Lun Chao. In the Conference on Computer Vision and Pattern Recognition, 2024 (<b>CVPR'24</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.04476">paper</a>]</span>
+                </li>
                 <li>
                 <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Revealing the Behavior of Large Language Models in Knowledge Conflicts
                 </span> <br />
