--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
+              </span> <br />
+              <span class="paperAuthor">Boshi Wang, Hao Fang, Jason Eisner, Benjamin Van Durme, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2403.04746">paper</a>][<a href="https://github.com/microsoft/simulated-trial-and-error">code</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">Middleware for LLMs: Tools Are Instrumental for Language Agents in Complex Environments
               </span> <br />
               <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
