--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2403.04746">paper</a>][<a href="https://github.com/microsoft/simulated-trial-and-error">code</a>] </span>
             </li>
             <li>
-              <span class="paperTitle">Middleware for LLMs: Tools Are Instrumental for Language Agents in Complex Environments
+              <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
               </span> <br />
               <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.14672">paper</a>] </span>
