--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">MagicLens: Self-Supervised Image Retrieval with Open-Ended Instructions
+              </span> <br />
+              <span class="paperAuthor">Kai Zhang, Yi Luan, Hexiang Hu, Kenton Lee, Siyuan Qiao, Wenhu Chen, Yu Su, Ming-Wei Chang.</span>
+              <span class="paperResource"> [<a href="https://open-vision-language.github.io/MagicLens/">project</a>][<a href="https://arxiv.org/abs/2403.19651">paper</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
               </span> <br />
               <span class="paperAuthor">Boshi Wang, Hao Fang, Jason Eisner, Benjamin Van Durme, Yu Su.</span>
