--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="divider"></div>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
         <ul>
-            <li><a href="https://entslscheia.github.io/">Yu Gu</a> (SP20 &#8211)</li>
+            <li><a href="https://scholar.google.com/citations?user=c5RwjjcAAAAJ">Yu Gu</a> (SP20 &#8211)</li>
             <li><a href="https://bernaljg.github.io/">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
             <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (SP20 &#8211)</li>
             <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (AU20 &#8211)</li>
