--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>02/2024: 3 papers accepted to ICML'24: <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, <a href="https://open-vision-language.github.io/MagicLens/">MagicLens</a>.</li>
             <li>04/2024: Honored that both <a href="https://imageomics.github.io/bioclip/">BioCLIP</a> and <a href="https://mmmu-benchmark.github.io/">MMMU</a> are selected for <b>oral presentation</b> at CVPR'24 (90/11,532, 0.8%)!</a> </li>
             <li>02/2024: 3 papers accepted to CVPR'24: <a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, <a href="https://mmmu-benchmark.github.io/">MMMU</a>, <a href="https://arxiv.org/abs/2402.04476">multimodal web agents</a>.</li>
             <li>02/2024: Excited to release <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, a real-world planning benchmark for language agents.</li>
@@ -236,12 +237,6 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
-              <span class="paperTitle">MagicLens: Self-Supervised Image Retrieval with Open-Ended Instructions
-              </span> <br />
-              <span class="paperAuthor">Kai Zhang, Yi Luan, Hexiang Hu, Kenton Lee, Siyuan Qiao, Wenhu Chen, Yu Su, Ming-Wei Chang.</span>
-              <span class="paperResource"> [<a href="https://open-vision-language.github.io/MagicLens/">project</a>][<a href="https://arxiv.org/abs/2403.19651">paper</a>] </span>
-            </li>
-            <li>
               <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
               </span> <br />
               <span class="paperAuthor">Boshi Wang, Hao Fang, Jason Eisner, Benjamin Van Durme, Yu Su.</span>
@@ -266,30 +261,19 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10890">paper</a>] </span>
             </li>
             <li>
-              <span class="paperTitle">TravelPlanner: A Benchmark for Real-World Planning with Language Agents
-              </span> <br />
-              <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
-            </li>
-            <li>
               <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
               </span> <br />
               <span class="paperAuthor">Tinghui Zhu*, Kai Zhang*, Jian Xie, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.17686">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Deductive-Beam-Search">code</a>] (*: Equal Contribution)</span>
             </li>
-            <li>
-              <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
-              </span> <br />
-              <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://arxiv.org/abs/2401.01614">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
-            </li>
             
-            <li>
+            
+            <!-- <li>
               <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
               </span> <br />
               <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.00608">paper</a>] </span>
-            </li>
+            </li> -->
             <li>
               <span class="paperTitle">Multimodal Question Answering for Unified Information Extraction
               </span> <br />
@@ -306,6 +290,24 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
+                </span> <br />
+                <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
+                <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://arxiv.org/abs/2401.01614">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">TravelPlanner: A Benchmark for Real-World Planning with Language Agents
+                </span> <br />
+                <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
+                <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
+              </li>
+              <li>
+                <span class="paperTitle">MagicLens: Self-Supervised Image Retrieval with Open-Ended Instructions
+                </span> <br />
+                <span class="paperAuthor">Kai Zhang, Yi Luan, Hexiang Hu, Kenton Lee, Siyuan Qiao, Wenhu Chen, Yu Su, Ming-Wei Chang. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
+                <span class="paperResource"> [<a href="https://open-vision-language.github.io/MagicLens/">project</a>][<a href="https://arxiv.org/abs/2403.19651">paper</a>] </span>
+              </li>
                 <li>
                   <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
                   </span> <br />
