--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>05/2024: 2 papers accepted to ACL'24: <a href="https://arxiv.org/abs/2403.04746">tool learning through simulated trial and error</a> and <a href="https://arxiv.org/abs/2402.10890">planning with LLMs</a> (or why it's hard).</li>
             <li>05/2024: New talk on <i>a holistic and critical look at language agents</i> at the <a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>.</li>
             <li>05/2024: 3 papers accepted to ICML'24: <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, <a href="https://open-vision-language.github.io/MagicLens/">MagicLens</a>.</li>
             <li>04/2024: Honored that both <a href="https://imageomics.github.io/bioclip/">BioCLIP</a> and <a href="https://mmmu-benchmark.github.io/">MMMU</a> are selected for <b>oral presentation</b> at CVPR'24 (90/11,532, 0.8%)!</a> </li>
@@ -238,12 +239,6 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
-              <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
-              </span> <br />
-              <span class="paperAuthor">Boshi Wang, Hao Fang, Jason Eisner, Benjamin Van Durme, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2403.04746">paper</a>][<a href="https://github.com/microsoft/simulated-trial-and-error">code</a>] </span>
-            </li>
-            <li>
               <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
               </span> <br />
               <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
@@ -254,12 +249,6 @@
               </span> <br />
               <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10196">paper</a>] </span>
-            </li>
-            <li>
-              <span class="paperTitle">When is Tree Search Useful for LLM Planning? It Depends on the Discriminator
-              </span> <br />
-              <span class="paperAuthor">Ziru Chen, Michael White, Raymond Mooney, Ali Payani, Yu Su, Huan Sun.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10890">paper</a>] </span>
             </li>
             <li>
               <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
@@ -291,6 +280,18 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
+                </span> <br />
+                <span class="paperAuthor">Boshi Wang, Hao Fang, Jason Eisner, Benjamin Van Durme, Yu Su. In the Annual Conference of the Association for Computational Linguistics, 2024 (<b>ACL'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2403.04746">paper</a>][<a href="https://github.com/microsoft/simulated-trial-and-error">code</a>] </span>
+              </li>
+              <li>
+                <span class="paperTitle">When is Tree Search Useful for LLM Planning? It Depends on the Discriminator
+                </span> <br />
+                <span class="paperAuthor">Ziru Chen, Michael White, Raymond Mooney, Ali Payani, Yu Su, Huan Sun. In the Annual Conference of the Association for Computational Linguistics, 2024 (<b>ACL'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10890">paper</a>] </span>
+              </li>
               <li>
                 <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
                 </span> <br />
