--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <p>I'm always looking for highly motivated students. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, or AI in general (unfortunately due to the high volumn I may not be able to reply to every email)</p>
 
-  <p><b>I'm hiring a postdoc (ML/Vision/NLP background) with potential topics including (multimodal) foundation models for sciences, LLMs, language agents and tool use. Send me an <a href="mailto: su.809@osu.edu">email</a> with CV and interests!</b></p>
+  <!-- <p><b>I'm hiring a postdoc (ML/Vision/NLP background) with potential topics including (multimodal) foundation models for sciences, LLMs, language agents and tool use. Send me an <a href="mailto: su.809@osu.edu">email</a> with CV and interests!</b></p> -->
 	</div>
     </div>
 	    
