--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">HippoRAG: Neurobiologically Inspired Long-Term Memory for Large Language Models
+              </span> <br />
+              <span class="paperAuthor">Bernal Jiménez Gutiérrez, Yiheng Shu, Yu Gu, Michihiro Yasunaga, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.14831">paper</a>] [<a href="https://github.com/OSU-NLP-Group/HippoRAG">code</a>]</span>
+            </li>
+            <li>
+              <span class="paperTitle">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization
+              </span> <br />
+              <span class="paperAuthor">Boshi Wang, Xiang Yue, Yu Su, Huan Sun.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
               </span> <br />
               <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
