--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>05/2024: Thrilled to release <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a> and bring my passion about biological intelligence into AI!</li>
             <li>05/2024: 2 papers accepted to ACL'24: <a href="https://arxiv.org/abs/2403.04746">tool learning through simulated trial and error</a> and <a href="https://arxiv.org/abs/2402.10890">planning with LLMs</a> (or why it's hard).</li>
             <li>05/2024: New talk on <i>a holistic and critical look at language agents</i> at the <a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>.</li>
             <li>05/2024: 3 papers accepted to ICML'24: <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>, <a href="https://open-vision-language.github.io/MagicLens/">MagicLens</a>.</li>
